add_program(
    TARGET ${TEST_EXECUTABLE_NAME}
    SRCS
    CommandLine/CommandLineAbstractOptionTest.cpp
    CommandLine/CommandLineOptionFlagTest.cpp
    CommandLine/CommandLineOptionTest.cpp
    CommandLine/CommandLineOptionValidatedTest.cpp
    CommandLine/CommandLineParserTest.cpp
    Event/Common/TimeTest.cpp
    Event/Button/CharacterTest.cpp
    Event/Pointer/ScrollUpTest.cpp
    Event/Pointer/ScrollDownTest.cpp
    Event/Pointer/ScrollLeftTest.cpp
    Event/Pointer/ScrollRightTest.cpp
    Event/Pointer/PositionXTest.cpp
    Event/Pointer/PositionYTest.cpp
    Event/Button/ButtonNameTest.cpp
    Event/Pointer/EllipseMajorInnerTest.cpp
    Event/Pointer/EllipseMajorOuterTest.cpp
    Event/Pointer/EllipseMinorInnerTest.cpp
    Event/Pointer/EllipseMinorOuterTest.cpp
    Event/Pointer/MultitouchTest.cpp
    Event/Pointer/OrientationTest.cpp
    Event/Button/ButtonActionTest.cpp
    Event/Button/ButtonIdTest.cpp
    Event/Pointer/PositionXOuterTest.cpp
    Event/Pointer/PositionYOuterTest.cpp
    Event/Common/TypeTest.cpp
    Event/TableDataTest.cpp
    Event/MouseMoveTest.cpp
    Event/MouseClickTest.cpp
    Event/KeyTest.cpp
    Event/MouseScrollTest.cpp
    Event/TouchTest.cpp
    Event/DataTest.cpp
    Event/FieldTest.cpp
)

add_subdirectory(TestUtils)